[package]

name = "immix_rust"
version = "0.0.1"
authors = [ "Yi Lin <yi.lin@anu.edu.au>" ]
build = "build.rs"

[build-dependencies.cc]
git = "https://github.com/alexcrichton/cc-rs"

[lib]
name = "immix_rust"
path = "src/lib.rs"
crate-type = ["dylib"]

[[bin]]

name = "immix-rust"
path = "src/main.rs"

[features]
exhaust = []
initobj = []
mt-gcbench = ["mt-trace"]
gcbench = ["mt-trace"]
mark = []
trace = []

mt-trace = []

[dependencies]
time = "0.1.34"
memmap = "0.2.2"
libc = "0.2.2"
lazy_static = "1.4.0"
log = "0.3.5"
crossbeam = "0.2.8"
simple_logger = "0.4.0"
